# AGENTIC_AI

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  full_error_traceback.txt  gunicorn_conf.py  main.py  privacy.md  pyproject.toml  requirements.txt  test_agents_phase2.py  test_all_agents_async.py  test_frontend.html  verify_agents.py  verify_production.py
AGENT/: brain.ipynb  current_strategy.json  functions.py  image_gen.ipynb  image_pred.ipynb
AGENT/EMAIL_GEN/: brain.ipynb
AGENT/IMAGE_GEN/: brain.ipynb  current_strategy.json  image_gen.ipynb  image_pred.ipynb  prompts.py  run_pipeline.py
AGENT/NACLE/: brain.ipynb  knowledge_graph.json  metacog_analytics.json  test_nacle.py
AGENT/NEXUS/: brain.ipynb  test_nexus.py
AGENT/PRESENTATION_GEN/: brain.ipynb
AGENT/QUANTA/: brain.ipynb  test_quanta.py
AGENT/QUIZ_GEN/: brain.ipynb
AGENT/ROADMAP_GEN/: brain.ipynb
AGENT/SCHOLAR/: brain.ipynb  test_scholar.py
AGENT/SECURITY_RECON_GEN/: brain.ipynb
AGENT/STUDENT_GEN/: brain.ipynb  progress.json
AGENT/VIDEO_GEN/: brain.ipynb  current_strategy.json  video.ipynb
AGENT/logs/: 2026-02-04_pinterest.jsonl
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  base.py  career_gen.py  email_gen.py  image_gen.py  nacle.py  nexus.py  presentation_gen.py  quanta.py  quanta_bad.py  quiz_gen.py  roadmap_gen.py  scholar.py  security_recon.py  student_gen.py  travel_gen.py  video_gen.py
app/core/: exceptions.py  logging.py
frontend/: index.html
logs/: 2026-02-04_pinterest.jsonl  2026-02-06_quizzes_local.jsonl
(+34 files in other folders)
