[project]
name = "langchain_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fpdf2>=2.8.5",
    "langchain>=1.2.8",
    "langchain-google-genai>=4.2.0",
    "langchain-openai>=1.1.7",
    "markdown>=3.10.1",
    "pdfkit>=1.0.0",
    "pyjwt>=2.11.0",
    "replicate>=1.0.7",
    "weasyprint>=68.0",
    "xhtml2pdf>=0.2.17",
]
